--- a/felipe/index.html
+++ b/felipe/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Minhas metas para o ano<span>.</span></h2>
+        <h2 class="titulo-principal">Minhas metas para o ano<span></span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">estudar para o enen</button>
-                <button class="botao">colocar em dia as minhas series</button>
+                <button class="botao">colocar em dia as minhas séries</button>
                 <button class="botao">passar de ano</button>
-                <button class="botao">terminar o ptojeto do alura</button>
+                <button class="botao">terminar o projeto do alura</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">assistir 3 series</h3>
+                    <h3 class="aba-conteudo-titulo-principal">assistir 3 séries</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar as series</h4>
                     <div class="contador">
                         <div class="contador-digito">
